--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "geojson-validation": "^0.2.1",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
     "mongodb": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "morgan": "~1.9.0",
+    "pug": "2.0.0-beta11"
   }
 }
